@@ -7,7 +7,6 @@
 
 package com.draeger.medical.sdccc.tests.biceps.direct;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.draeger.medical.sdccc.configuration.EnabledTestConfig;
@@ -17,18 +16,25 @@ import com.draeger.medical.sdccc.tests.annotations.TestDescription;
 import com.draeger.medical.sdccc.tests.annotations.TestIdentifier;
 import com.draeger.medical.sdccc.tests.util.NoTestData;
 import com.draeger.medical.sdccc.util.MessageGeneratingUtil;
+import com.google.common.collect.Sets;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.somda.sdc.biceps.common.MdibEntity;
 import org.somda.sdc.biceps.model.message.GetContextStatesResponse;
 import org.somda.sdc.biceps.model.message.GetMdStateResponse;
+import org.somda.sdc.biceps.model.participant.AbstractContextDescriptor;
 import org.somda.sdc.biceps.model.participant.AbstractContextState;
 import org.somda.sdc.biceps.model.participant.AbstractMultiState;
 import org.somda.sdc.biceps.model.participant.AbstractState;
@@ -39,6 +45,7 @@ import org.somda.sdc.biceps.model.participant.MdsDescriptor;
  */
 public class DirectParticipantModelServiceOperationsTest extends InjectorTestBase {
 
+    private static final Logger LOG = LogManager.getLogger();
     private TestClient testClient;
     private MessageGeneratingUtil messageGeneratingUtil;
 
@@ -157,34 +164,60 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
 
     @Test
     @TestIdentifier(EnabledTestConfig.BICEPS_R5042)
-    @TestDescription("Verifies that only one Mds descriptor is present and then does a "
-            + "GetContextStates request with only the Mds descriptor's handle and "
-            + "verifies that all known states are returned.")
+    @TestDescription("Verify that for each present Mds descriptors combination #mds_handle_comb# the "
+            + "following applies:\n"
+            + "   - request msg:GetContextStates for the #mds_handle_comb# and get all returning handle "
+            + "references #handle_refs_response#"
+            + "   - get all context states from the mdib #all_mds_context_states# for the given #mds_handle_comb#\n"
+            + "   - verify that all elements from #all_mds_context_states# are contained in the "
+            + "list #handle_refs_response#")
     void testRequirementR5042() throws NoTestData {
 
-        final List<MdsDescriptor> mdsDescriptors =
+        final var mdsHandleList =
                 testClient.getSdcRemoteDevice().getMdibAccess().findEntitiesByType(MdsDescriptor.class).stream()
-                        .map(mdibEntity -> (MdsDescriptor) mdibEntity.getDescriptor())
-                        .collect(Collectors.toList());
+                        .map(MdibEntity::getHandle)
+                        .toList();
+        assertTestData(mdsHandleList, "No Mds descriptor is present.");
 
-        assertTestData(mdsDescriptors, "No Mds descriptor present.");
-        assertEquals(1, mdsDescriptors.size(), "Too many Mds descriptors.");
+        final var contextStateSeen = new AtomicBoolean(false);
 
-        final Set<String> allExpectedContextStateHandles =
-                testClient.getSdcRemoteDevice().getMdibAccess().getContextStates().stream()
-                        .map(AbstractMultiState::getHandle)
-                        .collect(Collectors.toSet());
+        final var allMdsCombinations = Sets.powerSet(new HashSet<>(mdsHandleList)).stream()
+                .filter(it -> !it.isEmpty())
+                .collect(Collectors.toSet());
 
-        assertTestData(allExpectedContextStateHandles.size(), "No context states.");
+        for (var mdsCombination : allMdsCombinations) {
+            LOG.debug("Start verification for the mds descriptor combination {}.", mdsCombination);
 
-        final GetContextStatesResponse getContextStatesResponse = (GetContextStatesResponse) messageGeneratingUtil
-                .getContextStates(List.of(mdsDescriptors.get(0).getHandle()))
-                .getOriginalEnvelope()
-                .getBody()
-                .getAny()
-                .get(0);
+            final var allMdsContextStateEntities =
+                    testClient
+                            .getSdcRemoteDevice()
+                            .getMdibAccess()
+                            .findEntitiesByType(AbstractContextDescriptor.class)
+                            .stream()
+                            .filter(it ->
+                                    mdsCombination.stream().anyMatch(mdsHandle -> mdsHandle.equals(it.getParentMds())))
+                            .collect(Collectors.toSet());
 
-        verifyStatesInResponse(allExpectedContextStateHandles, getContextStatesResponse);
+            if (!allMdsContextStateEntities.isEmpty()) {
+                contextStateSeen.set(true);
+            }
+
+            final var allExpectedMdsContextStateHandles = allMdsContextStateEntities.stream()
+                    .map(it -> it.getStates(AbstractContextState.class))
+                    .flatMap(Collection::stream)
+                    .map(AbstractContextState::getHandle)
+                    .collect(Collectors.toSet());
+
+            final GetContextStatesResponse getContextStatesResponse = (GetContextStatesResponse) messageGeneratingUtil
+                    .getContextStates(mdsHandleList)
+                    .getOriginalEnvelope()
+                    .getBody()
+                    .getAny()
+                    .get(0);
+
+            verifyStatesInResponse(allExpectedMdsContextStateHandles, getContextStatesResponse);
+        }
+        assertTestData(contextStateSeen.get(), "No context states found for all present mds descriptors.");
     }
 
     @Test
@@ -249,7 +282,9 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
         for (var expectedContextStateHandle : expectedContextStateHandles) {
             assertTrue(
                     contextStateHandles.contains(expectedContextStateHandle),
-                    String.format("State handle %s has not been seen in response.", expectedContextStateHandle));
+                    String.format(
+                            "State handle '%s' has not been seen in response %s.%n",
+                            expectedContextStateHandle, contextStateHandles));
         }
     }
 
@@ -262,7 +297,9 @@ public class DirectParticipantModelServiceOperationsTest extends InjectorTestBas
         for (var expectedDescriptorHandle : expectedDescriptorHandles) {
             assertTrue(
                     descriptorHandles.contains(expectedDescriptorHandle),
-                    String.format("Descriptor handle %s has not been seen in response.", expectedDescriptorHandle));
+                    String.format(
+                            "Descriptor handle %s has not been seen in response %s.",
+                            expectedDescriptorHandle, descriptorHandles));
         }
     }
 }
